[gd_scene load_steps=8 format=3 uid="uid://dqgv3u1riibqd"]

[ext_resource type="Script" uid="uid://cjul2ft3xn8x5" path="res://scripts/hud.gd" id="1_hud"]
[ext_resource type="PackedScene" uid="uid://cj8v0xh5qn8mk" path="res://scenes/ui/chat_box.tscn" id="2_chat_box"]
[ext_resource type="PackedScene" uid="uid://bqm3k5h8tn9vl" path="res://scenes/ui/miku_fragment_bar.tscn" id="3_fragment_bar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp"]
bg_color = Color(1, 0, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mana"]
bg_color = Color(0, 0.8509804, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp"]
bg_color = Color(0.015686275, 0.22352941, 0.08235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boss_hp"]
bg_color = Color(0.8, 0.1, 0.1, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="StatsContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 100)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 110.0

[node name="HPContainer" type="HBoxContainer" parent="StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsContainer/HPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "HP:"

[node name="HPBar" type="ProgressBar" parent="StatsContainer/HPContainer"]
custom_minimum_size = Vector2(180, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hp")
value = 100.0
show_percentage = false

[node name="ManaContainer" type="HBoxContainer" parent="StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsContainer/ManaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "MANA:"

[node name="ManaBar" type="ProgressBar" parent="StatsContainer/ManaContainer"]
custom_minimum_size = Vector2(180, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_mana")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="XPContainer" type="HBoxContainer" parent="StatsContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="StatsContainer/XPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "LV 1 - XP:"

[node name="XPBar" type="ProgressBar" parent="StatsContainer/XPContainer"]
custom_minimum_size = Vector2(180, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_xp")
show_percentage = false

[node name="InfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -212.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 92.0
grow_horizontal = 0

[node name="GoldLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Gold: 0"
horizontal_alignment = 2

[node name="KillLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Kills: 0"
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Time: 00:00"
horizontal_alignment = 2

[node name="BiomeLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "\"Biome: Starting Forest\""
horizontal_alignment = 2

[node name="CoordsLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "\"Pos: 0, 0\""
horizontal_alignment = 2

[node name="EffectLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 2
visible = false

[node name="BossHealthBar" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="BossHealthBar"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 110.0
grow_horizontal = 2

[node name="BossNameLabel" type="Label" parent="BossHealthBar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "Fire Dragon"
horizontal_alignment = 1

[node name="HPBarContainer" type="HBoxContainer" parent="BossHealthBar/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BossHPBar" type="ProgressBar" parent="BossHealthBar/VBoxContainer/HPBarContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_boss_hp")
max_value = 1000.0
value = 1000.0
show_percentage = false

[node name="HPLabel" type="Label" parent="BossHealthBar/VBoxContainer/HPBarContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "1000/1000"

[node name="PhaseLabel" type="Label" parent="BossHealthBar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Phase 1"
horizontal_alignment = 1

[node name="ChatBox" parent="." instance=ExtResource("2_chat_box")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 210.0
grow_horizontal = 0

[node name="MikuFragmentBar" parent="." instance=ExtResource("3_fragment_bar")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
